:boom: Adjusting layout based on course learned

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
           <li>
             <a href="./contact.html">Blog</a>
           </li>
+          <li>
+            <a href="./task/index.html">Task (card info/home)</a>
+          </li>
+          <li>
+            <a href="./task/contact.html">Task (contact form)</a>
+          </li>
         </ul>
       </div>
 
