--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,12 @@
           <li>
             <a href="./contact.html">Blog</a>
           </li>
+          <li>
+            <a href="./task/index.html">Task (card info/home)</a>
+          </li>
+          <li>
+            <a href="./task/contact.html">Task (contact form)</a>
+          </li>
         </ul>
       </div>
 
@@ -61,9 +67,13 @@
         <label for="address">Address</label> <textarea id="address"></textarea>
       </div>
 
+      <p id="result"></p>
+
       <div>
-        <button type="submit">Submit</button>
+        <button type="submit" onclick="getData(event)">Submit</button>
       </div>
     </form>
   </body>
+
+  <script src="./assets/js/script.js"></script>
 </html>
