--- a/task/contact.html
+++ b/task/contact.html
@@ -29,9 +29,6 @@
             <a href="../contact.html">Blog</a>
           </li>
           <li>
-            <a href="./index.html">Task (card info/home)</a>
-          </li>
-          <li>
             <a href="./contact.html">Task (contact form)</a>
           </li>
         </ul>
@@ -77,8 +74,10 @@
       </div>
 
       <div>
-        <button type="submit">Submit</button>
+        <button type="submit" onclick="getData()">Submit</button>
       </div>
     </form>
   </body>
+
+  <script src="../assets/js/script.js"></script>
 </html>
