:rocket: Deploy task for day 3

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="./contact.html">Blog</a>
           </li>
           <li>
-            <a href="./task/contact.html">Task (contact form)</a>
+            <a href="./task/contact.html">Task (js contact form)</a>
           </li>
         </ul>
       </div>
