--- a/task/contact.html
+++ b/task/contact.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav>
-      <!-- space between 2 layout -->
+      <!-- justify content is space between 2 layout -->
       <!-- layout 1 -->
       <div class="left">
         <ul>
@@ -29,7 +29,7 @@
             <a href="../contact.html">Blog</a>
           </li>
           <li>
-            <a href="./contact.html">Task (contact form)</a>
+            <a href="./contact.html">Task (js contact form)</a>
           </li>
         </ul>
       </div>
