--- a/task/index.html
+++ b/task/index.html
@@ -29,7 +29,7 @@
             <a href="../contact.html">Blog</a>
           </li>
           <li>
-            <a href="./contact.html">Task (contact form)</a>
+            <a href="./contact.html">Task (js contact form)</a>
           </li>
         </ul>
       </div>
