--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
   <head>
     <title>Personal Website</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
 
@@ -21,10 +27,10 @@
             <a href="./contact.html">Blog</a>
           </li>
           <li>
-            <a href="./task/index.html">Task (card info/home)</a>
+            <a href="./task/index.html">Card Info - T</a>
           </li>
           <li>
-            <a href="./task/contact.html">Task (contact form)</a>
+            <a href="./task/contact.html">Contact - T</a>
           </li>
         </ul>
       </div>
