--- a/task/contact.html
+++ b/task/contact.html
@@ -29,10 +29,10 @@
             <a href="../contact.html">Blog</a>
           </li>
           <li>
-            <a href="./index.html">Task (card info/home)</a>
+            <a href="./index.html">Card Info - T</a>
           </li>
           <li>
-            <a href="./contact.html">Task (contact form)</a>
+            <a href="./contact.html">Contact - T</a>
           </li>
         </ul>
       </div>
