--- a/task/index.html
+++ b/task/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>Personal Website</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins"
@@ -29,10 +31,10 @@
             <a href="../contact.html">Blog</a>
           </li>
           <li>
-            <a href="./index.html">Task (card info/home)</a>
+            <a href="./index.html">Card Info - T</a>
           </li>
           <li>
-            <a href="./contact.html">Task (contact form)</a>
+            <a href="./contact.html">Contact - T</a>
           </li>
         </ul>
       </div>
