:rocket: Deploy for task day-4

--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
             <a href="./index.html">Home</a>
           </li>
           <li>
-            <a href="./contact.html">Blog</a>
-          </li>
-          <li>
-            <a href="./task/contact.html">Task (js contact form)</a>
+            <a href="./task/blog.html">Blog</a>
           </li>
         </ul>
       </div>
