--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             <a href="./index.html">Home</a>
           </li>
           <li>
-            <a href="./contact.html">Blog</a>
+            <a href="./task/blog.html">Blog</a>
           </li>
           <li>
             <a href="./task/contact.html">Task (js contact form)</a>
