:truck: Move blog.html to root folder

--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../assets/css/blog.css" />
+    <link rel="stylesheet" href="./assets/css/blog.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins"
       rel="stylesheet"
@@ -18,12 +18,12 @@
         <ul>
           <img
             class="logo"
-            src="../assets/images/dumbways.png"
+            src="./assets/images/dumbways.png"
             alt="logo-image"
           />
 
           <li class="active">
-            <a href="../index.html">Home</a>
+            <a href="./index.html">Home</a>
           </li>
           <li>
             <a href="./blog.html">Blog</a>
@@ -33,7 +33,7 @@
 
       <!-- layout 2 -->
       <div class="right">
-        <a href="../contact.html">Contact Me</a>
+        <a href="./contact.html">Contact Me</a>
       </div>
     </nav>
 
@@ -59,7 +59,7 @@
                 <label for="input-blog-image">
                   <p id="attach-image">Attach File</p>
                   <img
-                    src="../assets/icons/attach.png"
+                    src="./assets/icons/attach.png"
                     alt="file"
                     style="width: 40px"
                   />
@@ -85,6 +85,6 @@
         <!-- dynamic content would be here -->
       </div>
     </div>
-    <script src="../assets/js/blog.js"></script>
+    <script src="./assets/js/blog.js"></script>
   </body>
 </html>
