:adhesive_bandage: Fix few issue with navbar

--- a/blog.html
+++ b/blog.html
@@ -16,12 +16,13 @@
       <!-- layout 1 -->
       <div class="left">
         <ul>
-          <img
-            class="logo"
-            src="./assets/images/dumbways.png"
-            alt="logo-image"
-          />
-
+          <a href="./index.html">
+            <img
+              class="logo"
+              src="./assets/images/dumbways.png"
+              alt="logo-image"
+            />
+          </a>
           <li class="active">
             <a href="./index.html">Home</a>
           </li>
