--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins"
       rel="stylesheet"
@@ -16,24 +16,26 @@
       <!-- layout 1 -->
       <div class="left">
         <ul>
-          <img
-            class="logo"
-            src="../assets/images/dumbways.png"
-            alt="logo-image"
-          />
+          <a href="./index.html">
+            <img
+              class="logo"
+              src="./assets/images/dumbways.png"
+              alt="logo-image"
+            />
+          </a>
 
           <li class="active">
-            <a href="../index.html">Home</a>
+            <a href="./index.html">Home</a>
           </li>
           <li>
-            <a href="../contact.html">Blog</a>
+            <a href="./blog.html">Blog</a>
           </li>
         </ul>
       </div>
 
       <!-- layout 2 -->
       <div class="right">
-        <a href="../contact.html">Contact Me</a>
+        <a href="./contact.html">Contact Me</a>
       </div>
     </nav>
 
