--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <html>
   <head>
     <title>Personal Website</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
   <body>
     <nav>
       <div class="left">
         <ul>
-          <img
-            class="logo"
-            src="./assets/images/dumbways.png"
-            alt="logo-image"
-          />
+          <a href="./index.html">
+            <img
+              class="logo"
+              src="./assets/images/dumbways.png"
+              alt="logo-image"
+            />
+          </a>
 
           <li class="active">
             <a href="./index.html">Home</a>
           </li>
           <li>
-            <a href="./task/blog.html">Blog</a>
+            <a href="./blog.html">Blog</a>
           </li>
         </ul>
       </div>
@@ -29,35 +41,86 @@
     </nav>
     <div
       style="
-        border: 1px black solid;
-        width: 350px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        border: 1px rgba(0, 0, 0, 0.084) solid;
+        width: 70%;
         margin: auto;
-        margin-top: 40px;
-        padding: 20px;
-        box-shadow: 0px 0px 30px grey;
+        margin-top: 22px;
+        padding: 15px 50px;
+        box-shadow: 0px 0px 30px rgba(224, 224, 224, 0.881);
+        border-radius: 15px;
       "
     >
-      <img
-        src="./assets/images/luffy.jpg"
-        style="width: 100%; border-radius: 10px"
-      />
-      <h1>Ilham Fathullh</h1>
-      <p style="display: none">Seorang fullstack developer profesional</p>
+      <!-- first column -->
+      <div style="flex: 50%; margin-right: 50px">
+        <h2>Hi! Welcome to my hut</h2>
+        <p style="text-align: justify">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum
+          facere qui similique, eligendi repellat rerum voluptate inventore
+          ipsum, vitae tempore nihil velit exercitationem nobis in sed deserunt
+          error eum accusamus. Labore, officiis suscipit, quo debitis, molestias
+          magni necessitatibus reiciendis saepe iusto quos alias provident quod
+        </p>
+        <button
+          style="
+            font-family: 'Poppins';
+            background-color: #111727;
+            color: white;
+            padding: 5px 25px;
+            border-radius: 20px;
+            margin-bottom: 20px;
+            margin-right: 30px;
+            margin-top: 15px;
+            cursor: pointer;
+          "
+        >
+          contact
+        </button>
+        <a href="./assets/pdf/CV_Alfi.pdf">download CV</a>
+        <div style="margin-top: 30px">
+          <i
+            class="fa fa-linkedin-square"
+            style="font-size: 35px; margin-right: 14px"
+          ></i>
+          <i
+            class="fa fa-instagram"
+            style="font-size: 35px; margin-right: 14px"
+          ></i>
+          <i
+            class="fa fa-facebook"
+            style="font-size: 35px; margin-right: 14px"
+          ></i>
+          <i class="fa fa-twitter" style="font-size: 35px"></i>
+        </div>
+      </div>
 
-      <table
-        style="border: 1px black solid; border-collapse: collapse; width: 100%"
+      <!-- second column -->
+      <div
+        style="
+          flex: 50%;
+          height: 100%;
+          background-color: white;
+          width: max-content;
+          border: 1px solid rgba(0, 0, 0, 0.084);
+          text-align: center;
+          border-radius: 15px;
+          box-shadow: 0px 0px 30px rgba(224, 224, 224, 0.881);
+        "
       >
-        <tr>
-          <th style="border: 1px black solid">Experience</th>
-          <th style="border: 1px black solid">Years</th>
-        </tr>
-        <tr>
-          <td style="border: 1px black solid; text-align: center">
-            Full Stack Mobile Dev
-          </td>
-          <td style="border: 1px black solid; text-align: center">2024</td>
-        </tr>
-      </table>
+        <div
+          class="img-as-bg"
+          style="
+            background-image: url('../assets/images/pede.jpg');
+            border-top-left-radius: inherit;
+            border-top-right-radius: inherit;
+          "
+        ></div>
+        <h1>Alfi Dharmawan</h1>
+        <p>Fullstack Developer</p>
+      </div>
     </div>
   </body>
 </html>
