:sparkles: Add link to social media icon

--- a/index.html
+++ b/index.html
@@ -77,18 +77,33 @@
             cursor: pointer;
           "
         >
-          contact
+          <a href="./contact.html" style="text-decoration: none; color: white">
+            contact
+          </a>
         </button>
         <a href="./assets/pdf/CV_Alfi.pdf">download CV</a>
         <div style="margin-top: 30px">
-          <i
-            class="fa fa-linkedin-square"
-            style="font-size: 35px; margin-right: 14px"
-          ></i>
-          <i
-            class="fa fa-instagram"
-            style="font-size: 35px; margin-right: 14px"
-          ></i>
+          <a
+            href="https://www.linkedin.com/in/alfi-dharmawan/"
+            style="text-decoration: none; color: black"
+            target="_blank"
+          >
+            <i
+              class="fa fa-linkedin-square"
+              style="font-size: 35px; margin-right: 14px; cursor: pointer"
+            >
+            </i>
+          </a>
+          <a
+            href="https://www.instagram.com/alfidh._"
+            style="text-decoration: none; color: black"
+            target="_blank"
+          >
+            <i
+              class="fa fa-instagram"
+              style="font-size: 35px; margin-right: 14px; cursor: pointer"
+            ></i>
+          </a>
           <i
             class="fa fa-facebook"
             style="font-size: 35px; margin-right: 14px"
