--- a/detail.html
+++ b/detail.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Personal Website</title>
+    <title>Detail Page</title>
   </head>
   <body>
     <nav>
