--- a/blog.html
+++ b/blog.html
@@ -3,9 +3,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/blog.css" />
+    <link rel="stylesheet" href="./assets/css/navbar.css" />
+
     <link
       href="https://fonts.googleapis.com/css?family=Poppins"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <title>Creating Blog Page</title>
   </head>
@@ -35,8 +41,51 @@
       <!-- layout 2 -->
       <div class="right">
         <a href="./contact.html">Contact Me</a>
+        <button class="btn-hamburger" onclick="toggleNavbar()">
+          <i class="fa fa-bars"></i>
+        </button>
       </div>
     </nav>
+
+    <!-- burger menu -->
+    <ul class="hamburger-container hamburger-hide" id="hamburger-container">
+      <li
+        style="
+          border: 2px solid white;
+          text-align: center;
+          padding: 10px;
+          color: white;
+          font-weight: bold;
+          font-size: x-large;
+        "
+      >
+        <a href="./index.html">Home</a>
+      </li>
+      <li
+        style="
+          border: 2px solid white;
+          text-align: center;
+          padding: 10px;
+          color: white;
+          font-weight: bold;
+          font-size: x-large;
+        "
+      >
+        <a href="./blog.html">Blog</a>
+      </li>
+      <li
+        style="
+          border: 2px solid white;
+          text-align: center;
+          padding: 10px;
+          color: white;
+          font-weight: bold;
+          font-size: x-large;
+        "
+      >
+        <a href="./contact.html">Contact Me</a>
+      </li>
+    </ul>
 
     <!-- Blog -->
     <!-- Form -->
@@ -87,5 +136,6 @@
       </div>
     </div>
     <script src="./assets/js/blog.js"></script>
+    <script src="./assets/js/navbar.js"></script>
   </body>
 </html>
