--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css?family=Poppins"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Personal Website</title>
   </head>
   <body>
@@ -37,8 +41,51 @@
       <!-- layout 2 -->
       <div class="right">
         <a href="./contact.html">Contact Me</a>
+        <button class="btn-hamburger" onclick="toggleNavbar()">
+          <i class="fa fa-bars"></i>
+        </button>
       </div>
     </nav>
+
+    <!-- burger menu -->
+    <ul class="hamburger-container hamburger-hide" id="hamburger-container">
+      <li
+        style="
+          border: 2px solid white;
+          text-align: center;
+          padding: 10px;
+          color: white;
+          font-weight: bold;
+          font-size: x-large;
+        "
+      >
+        <a href="./index.html">Home</a>
+      </li>
+      <li
+        style="
+          border: 2px solid white;
+          text-align: center;
+          padding: 10px;
+          color: white;
+          font-weight: bold;
+          font-size: x-large;
+        "
+      >
+        <a href="./blog.html">Blog</a>
+      </li>
+      <li
+        style="
+          border: 2px solid white;
+          text-align: center;
+          padding: 10px;
+          color: white;
+          font-weight: bold;
+          font-size: x-large;
+        "
+      >
+        <a href="./contact.html">Contact Me</a>
+      </li>
+    </ul>
 
     <!-- formulir -->
     <form>
@@ -77,7 +124,7 @@
         <button type="submit" onclick="getData(event)">Submit</button>
       </div>
     </form>
+    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/navbar.js"></script>
   </body>
-
-  <script src="./assets/js/script.js"></script>
 </html>
