--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,9 @@
           <li>
             <a href="./blog.html">Blog</a>
           </li>
+          <li>
+            <a href="./testimonial.html">Testimonial</a>
+          </li>
         </ul>
       </div>
 
@@ -72,6 +75,18 @@
         "
       >
         <a href="./blog.html">Blog</a>
+      </li>
+      <li
+        style="
+          border: 2px solid white;
+          text-align: center;
+          padding: 10px;
+          color: white;
+          font-weight: bold;
+          font-size: x-large;
+        "
+      >
+        <a href="./testimonial.html">Testimonial</a>
       </li>
       <li
         style="
