:art: Improving code by moving inline css to external on navbar

--- a/index.html
+++ b/index.html
@@ -49,52 +49,16 @@
 
     <!-- burger menu -->
     <ul class="hamburger-container hamburger-hide" id="hamburger-container">
-      <li
-        style="
-          border: 2px solid white;
-          text-align: center;
-          padding: 10px;
-          color: white;
-          font-weight: bold;
-          font-size: x-large;
-        "
-      >
+      <li class="hamburger-nav">
         <a href="./index.html">Home</a>
       </li>
-      <li
-        style="
-          border: 2px solid white;
-          text-align: center;
-          padding: 10px;
-          color: white;
-          font-weight: bold;
-          font-size: x-large;
-        "
-      >
+      <li class="hamburger-nav">
         <a href="./blog.html">Blog</a>
       </li>
-      <li
-        style="
-          border: 2px solid white;
-          text-align: center;
-          padding: 10px;
-          color: white;
-          font-weight: bold;
-          font-size: x-large;
-        "
-      >
+      <li class="hamburger-nav">
         <a href="./testimonial.html">Testimonial</a>
       </li>
-      <li
-        style="
-          border: 2px solid white;
-          text-align: center;
-          padding: 10px;
-          color: white;
-          font-weight: bold;
-          font-size: x-large;
-        "
-      >
+      <li class="hamburger-nav">
         <a href="./contact.html">Contact Me</a>
       </li>
     </ul>
