:sparkles: Add asynchronous concept to show testimonial data

--- a/testimonial.html
+++ b/testimonial.html
@@ -29,13 +29,13 @@
             />
           </a>
 
-          <li class="active">
+          <li>
             <a href="./index.html">Home</a>
           </li>
           <li>
             <a href="./blog.html">Blog</a>
           </li>
-          <li>
+          <li class="active">
             <a href="./testimonial.html">Testimonial</a>
           </li>
         </ul>
@@ -93,6 +93,6 @@
     </div>
     <script src="assets/js/testimonial.js"></script>
     <script src="assets/js/index.js"></script>
-    <script src="assets/js/nav.js"></script>
+    <script src="assets/js/navbar.js"></script>
   </body>
 </html>
