--- a/blog.html
+++ b/blog.html
@@ -3,106 +3,96 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/blog.css" />
-    <link rel="stylesheet" href="./assets/css/navbar.css" />
-
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
     <title>Creating Blog Page</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <style>
+      .active {
+        color: orangered !important;
+      }
+    </style>
   </head>
 
   <body>
-    <nav>
-      <!-- justify content is space between 2 layout -->
-      <!-- layout 1 -->
-      <div class="left">
-        <ul>
-          <a href="./index.html">
-            <img
-              class="logo"
-              src="./assets/images/dumbways.png"
-              alt="logo-image"
-            />
-          </a>
-          <li>
-            <a href="./index.html">Home</a>
-          </li>
-          <li class="active">
-            <a href="./blog.html">Blog</a>
-          </li>
-          <li>
-            <a href="./testimonial.html">Testimonial</a>
-          </li>
-        </ul>
-      </div>
-
-      <!-- layout 2 -->
-      <div class="right">
-        <a href="./contact.html">Contact Me</a>
-        <button class="btn-hamburger" onclick="toggleNavbar()">
-          <i class="fa fa-bars"></i>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="./assets/images/dumbways.png" style="width: 50px" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
         </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="blog.html"
+                >Blog</a
+              >
+            </li>
+          </ul>
+          <a href="contact.html" class="btn btn-danger">Contact Me</a>
+        </div>
       </div>
     </nav>
 
-    <!-- burger menu -->
-    <ul class="hamburger-container hamburger-hide" id="hamburger-container">
-      <li class="hamburger-nav">
-        <a href="./index.html">Home</a>
-      </li>
-      <li class="hamburger-nav">
-        <a href="./blog.html">Blog</a>
-      </li>
-      <li class="hamburger-nav">
-        <a href="./testimonial.html">Testimonial</a>
-      </li>
-      <li class="hamburger-nav">
-        <a href="./contact.html">Contact Me</a>
-      </li>
-    </ul>
+    <!-- end navbar -->
 
-    <!-- Blog -->
-    <!-- Form -->
-
+    <!-- form -->
     <div class="blog">
-      <div class="blog-form">
+      <div>
         <div class="form-container">
-          <form onsubmit="addBlog(event)">
-            <h1>Create Post Blog</h1>
-            <div>
-              <label for="input-blog-title">Title</label>
-              <input id="input-blog-title" />
-            </div>
-            <div>
-              <label for="input-blog-content">Content</label>
-              <textarea id="input-blog-content"></textarea>
-            </div>
-            <div>
-              <label>Upload Image</label>
-              <div class="input-blog-image-group">
-                <label for="input-blog-image">
-                  <p id="attach-image">Attach File</p>
-                  <img
-                    src="./assets/icons/attach.png"
-                    alt="file"
-                    style="width: 40px"
-                  />
-                </label>
+          <form
+            style="display: flex; flex-direction: column; align-items: center"
+            onsubmit="addBlog(event)"
+          >
+            <h1 class="text-center mt-3">Create Post Blog</h1>
+
+            <div style="width: 500px">
+              <div class="mb-3">
+                <label for="input-blog-title" class="form-label mt-4"
+                  >Title</label
+                >
+                <input type="text" class="form-control" id="input-blog-title" />
+              </div>
+              <div class="mb-3">
+                <label for="input-blog-content" class="form-label"
+                  >Content</label
+                >
+                <textarea
+                  class="form-control"
+                  id="input-blog-content"
+                  style="height: 100px"
+                ></textarea>
+              </div>
+              <div class="mb-3">
+                <label for="input-blog-image" class="form-label"
+                  >Upload Image</label
+                >
                 <input
                   type="file"
+                  class="form-control"
                   id="input-blog-image"
-                  hidden
                   onchange="prev_image(event)"
                 />
               </div>
-            </div>
-            <div class="button-group">
-              <button>Post Blog</button>
+              <div class="d-flex justify-content-end">
+                <button type="submit" class="btn btn-danger">Post Blog</button>
+              </div>
             </div>
           </form>
         </div>
@@ -114,6 +104,14 @@
         <!-- dynamic content would be here -->
       </div>
     </div>
+
+    <!-- end form -->
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <script src="./assets/js/blog.js"></script>
     <script src="./assets/js/navbar.js"></script>
   </body>
