--- a/index.html
+++ b/index.html
@@ -1,102 +1,125 @@
 <html>
   <head>
-    <title>Personal Website</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/navbar.css" />
+    <title>Personal Website</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Poppins"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <style>
+      .active {
+        font-weight: bold;
+        color: #111727 !important;
+      }
+    </style>
   </head>
 
   <body>
-    <nav>
-      <div class="left">
-        <ul>
-          <a href="./index.html">
-            <img
-              class="logo"
-              src="./assets/images/dumbways.png"
-              alt="logo-image"
-            />
-          </a>
-
-          <li class="active">
-            <a href="./index.html">Home</a>
-          </li>
-          <li>
-            <a href="./blog.html">Blog</a>
-          </li>
-          <li>
-            <a href="./testimonial.html">Testimonial</a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="right">
-        <a href="./contact.html">Contact Me</a>
-        <button class="btn-hamburger" onclick="toggleNavbar()">
-          <i class="fa fa-bars"></i>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary ms-4">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="./assets/images/dumbways.png" style="width: 50px" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
         </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="testimonial.html"
+                >Testimonial</a
+              >
+            </li>
+          </ul>
+          <a href="contact.html" class="btn btn-danger">Contact Me</a>
+        </div>
       </div>
     </nav>
 
-    <!-- burger menu -->
-    <ul class="hamburger-container hamburger-hide" id="hamburger-container">
-      <li class="hamburger-nav">
-        <a href="./index.html">Home</a>
-      </li>
-      <li class="hamburger-nav">
-        <a href="./blog.html">Blog</a>
-      </li>
-      <li class="hamburger-nav">
-        <a href="./testimonial.html">Testimonial</a>
-      </li>
-      <li class="hamburger-nav">
-        <a href="./contact.html">Contact Me</a>
-      </li>
-    </ul>
+    <div class="height-mobile d-flex align-items-center">
+      <div class="w-75 container-sm bg-body rounded-3 shadow pb-3 pt-3">
+        <div
+          class="d-xs-block d-sm-flex align-items-center small-container-mobile"
+        >
+          <div class="card me-3 width-container-mobile border-0">
+            <div class="card-body">
+              <h3 class="card-title"><strong>Hi! welcome to my bio</strong></h3>
+              <p class="card-text">
+                Computer science graduate with 3+ years of experience in various
+                application development projects, including troubleshoot and
+                integrations using CI/CD tools. Have a strong will and eager to
+                learn new things, also quickly adapt to new teams.
+              </p>
+              <div
+                class="d-flex flex-row align-items-center small-container-mobile"
+              >
+                <a
+                  href="contact.html"
+                  class="btn me-4"
+                  style="background-color: #111727; color: white"
+                  >Contact</a
+                >
+                <a href="./assets/pdf/CV_Alfi.pdf">View CV</a>
+              </div>
+            </div>
+            <div id="social-links" class="ps-3">
+              <a
+                href="https://www.linkedin.com/in/alfi-dharmawan/"
+                target="_blank"
+              >
+                <i class="fa fa-linkedin-square social-icon"></i>
+              </a>
+              <a href="https://www.instagram.com/alfidh._" target="_blank">
+                <i class="fa fa-instagram social-icon"></i>
+              </a>
+              <i class="fa fa-facebook social-icon"></i>
+              <i class="fa fa-twitter social-icon"></i>
+            </div>
+          </div>
 
-    <div id="main-container">
-      <!-- first column -->
-      <div id="first-column">
-        <h2>Hi! Welcome to my hut</h2>
-        <p id="first-column-paragraph">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum
-          facere qui similique, eligendi repellat rerum voluptate inventore
-          ipsum, vitae tempore nihil velit exercitationem nobis in sed deserunt
-          error eum accusamus. Labore, officiis suscipit, quo debitis, molestias
-          magni necessitatibus reiciendis saepe iusto quos alias provident quod
-        </p>
-        <button id="contact-button">
-          <a id="contact-link" href="./contact.html">contact</a>
-        </button>
-        <a href="./assets/pdf/CV_Alfi.pdf">download CV</a>
-        <div id="social-links">
-          <a href="https://www.linkedin.com/in/alfi-dharmawan/" target="_blank">
-            <i class="fa fa-linkedin-square social-icon"></i>
-          </a>
-          <a href="https://www.instagram.com/alfidh._" target="_blank">
-            <i class="fa fa-instagram social-icon"></i>
-          </a>
-          <i class="fa fa-facebook social-icon"></i>
-          <i class="fa fa-twitter social-icon"></i>
+          <div class="card card-width-mobile rounded-4 shadow-sm border-1">
+            <img
+              src="/assets/images/luffy.jpg"
+              class="card-img-top rounded-top-4"
+              alt="foto profil"
+            />
+            <div class="card-body text-center">
+              <h4 class="pt-1"><strong>Alfi Dharmawan</strong></h4>
+              <p>Fullstack Developer</p>
+            </div>
+          </div>
         </div>
       </div>
-
-      <!-- second column -->
-      <div id="second-column">
-        <div class="img-as-bg"></div>
-        <h1>Alfi Dharmawan</h1>
-        <p>Fullstack Developer</p>
-      </div>
     </div>
-    <script src="./assets/js/navbar.js"></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
