--- a/blog.html
+++ b/blog.html
@@ -89,12 +89,7 @@
                 <label for="input-blog-image" class="form-label"
                   >Upload Image</label
                 >
-                <input
-                  type="file"
-                  class="form-control"
-                  id="input-blog-image"
-                  onchange="prev_image(event)"
-                />
+                <input type="file" class="form-control" id="input-blog-image" />
               </div>
               <div class="d-flex justify-content-end">
                 <button type="submit" class="btn btn-danger">Post Blog</button>
