--- a/testimonial.html
+++ b/testimonial.html
@@ -3,67 +3,65 @@
     <title>Personal Website</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/navbar.css" />
-    <link rel="stylesheet" href="./assets/css/testimonial.css" />
-
+    <title>Testimonial</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Poppins"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/testimonial.css" />
+    <style>
+      .active {
+        font-weight: bold;
+        color: #111727 !important;
+      }
+    </style>
   </head>
 
   <body>
-    <nav>
-      <div class="left">
-        <ul>
-          <a href="./index.html">
-            <img
-              class="logo"
-              src="./assets/images/dumbways.png"
-              alt="logo-image"
-            />
-          </a>
-
-          <li>
-            <a href="./index.html">Home</a>
-          </li>
-          <li>
-            <a href="./blog.html">Blog</a>
-          </li>
-          <li class="active">
-            <a href="./testimonial.html">Testimonial</a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="right">
-        <a href="./contact.html">Contact Me</a>
-        <button class="btn-hamburger" onclick="toggleNavbar()">
-          <i class="fa fa-bars"></i>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary ms-4">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="./assets/images/dumbways.png" style="width: 50px" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
         </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="testimonial.html"
+                >Testimonial</a
+              >
+            </li>
+          </ul>
+          <a href="contact.html" class="btn btn-danger">Contact Me</a>
+        </div>
       </div>
     </nav>
-
-    <!-- burger menu -->
-    <ul class="hamburger-container hamburger-hide" id="hamburger-container">
-      <li class="hamburger-nav">
-        <a href="./index.html">Home</a>
-      </li>
-      <li class="hamburger-nav">
-        <a href="./blog.html">Blog</a>
-      </li>
-      <li class="hamburger-nav">
-        <a href="./testimonial.html">Testimonial</a>
-      </li>
-      <li class="hamburger-nav">
-        <a href="./contact.html">Contact Me</a>
-      </li>
-    </ul>
 
     <div class="container">
       <h1>My Testimonials</h1>
