:adhesive_bandage: Minor fix on some component

--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
 
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary ms-4">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary ps-4">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img src="./assets/images/dumbways.png" style="width: 50px" />
@@ -66,9 +66,9 @@
             style="display: flex; flex-direction: column; align-items: center"
             onsubmit="addBlog(event)"
           >
-            <h1 class="text-center mt-3">Create Post Blog</h1>
+            <h1 class="text-center mt-3"><strong>Create Post Blog</strong></h1>
 
-            <div style="width: 500px">
+            <div class="w-75">
               <div class="mb-3">
                 <label for="input-blog-title" class="form-label mt-4"
                   >Title</label
