--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/navbar.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Poppins"
-      rel="stylesheet"
-    />
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"/>
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -17,58 +17,48 @@
   </head>
   <body>
     <nav>
-      <!-- justify content is space between 2 layout -->
-      <!-- layout 1 -->
-      <div class="left">
-        <ul>
-          <a href="./index.html">
-            <img
-              class="logo"
-              src="./assets/images/dumbways.png"
-              alt="logo-image"
-            />
-          </a>
-
-          <li>
-            <a href="./index.html">Home</a>
-          </li>
-          <li>
-            <a href="./blog.html">Blog</a>
-          </li>
-          <li>
-            <a href="./testimonial.html">Testimonial</a>
-          </li>
-        </ul>
-      </div>
-
-      <!-- layout 2 -->
-      <div class="right">
-        <a href="./contact.html">Contact Me</a>
-        <button class="btn-hamburger" onclick="toggleNavbar()">
-          <i class="fa fa-bars"></i>
+     <!-- navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary ps-4">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="./assets/images/dumbways.png" style="width: 50px" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
         </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="blog.html"
+                >Blog</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="testimonial.html"
+                >Testimonial</a
+              >
+            </li>
+          </ul>
+          <a href="contact.html" class="btn btn-danger">Contact Me</a>
+        </div>
       </div>
     </nav>
-
-    <!-- burger menu -->
-    <ul class="hamburger-container hamburger-hide" id="hamburger-container">
-      <li class="hamburger-nav">
-        <a href="./index.html">Home</a>
-      </li>
-      <li class="hamburger-nav">
-        <a href="./blog.html">Blog</a>
-      </li>
-      <li class="hamburger-nav">
-        <a href="./testimonial.html">Testimonial</a>
-      </li>
-      <li class="hamburger-nav">
-        <a href="./contact.html">Contact Me</a>
-      </li>
-    </ul>
+    <!-- end navbar -->
 
     <!-- formulir -->
     <form>
-      <h2>GET IN TOUCH</h2>
+      <h2><strong>GET IN TOUCH</strong></h2>
       <div>
         <label for="nameInput">Name</label>
         <input id="nameInput" type="text" required />
@@ -103,7 +93,11 @@
         <button type="submit" onclick="getData(event)">Submit</button>
       </div>
     </form>
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
     <script src="./assets/js/script.js"></script>
-    <script src="./assets/js/navbar.js"></script>
   </body>
 </html>
