--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary ms-4">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary ps-4">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img src="./assets/images/dumbways.png" style="width: 50px" />
