--- a/testimonial.html
+++ b/testimonial.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary ms-4">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary ps-4">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img src="./assets/images/dumbways.png" style="width: 50px" />
@@ -64,7 +64,7 @@
     </nav>
 
     <div class="container">
-      <h1>My Testimonials</h1>
+      <h1><strong>My Testimonials</strong></h1>
       <div class="container-rating">
         <h2>Rating By Star</h2>
         <div class="rating">
@@ -89,8 +89,13 @@
 
       <section class="testimonials" id="testimonials"></section>
     </div>
+
     <script src="assets/js/testimonial.js"></script>
     <script src="assets/js/index.js"></script>
-    <script src="assets/js/navbar.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    />
   </body>
 </html>
