:recycle: Rewrite blog page into project page

--- a/testimonial.html
+++ b/testimonial.html
@@ -47,7 +47,9 @@
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="blog.html">Blog</a>
+              <a class="nav-link" aria-current="page" href="project.html"
+                >My Project</a
+              >
             </li>
             <li class="nav-item">
               <a
@@ -65,8 +67,8 @@
 
     <div class="container">
       <h1><strong>My Testimonials</strong></h1>
-      <div class="container-rating">
-        <h2>Rating By Star</h2>
+      <div class="container-rating mt-2">
+        <h5>Rating By Star</h5>
         <div class="rating">
           <button onclick="allTestimonial()" class="rating-btn">All</button>
           <button onclick="filterTestimonial(1)" class="rating-btn">
