--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,8 @@
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="blog.html"
-                >Blog</a
+              <a class="nav-link" aria-current="page" href="project.html"
+                >My Project</a
               >
             </li>
             <li class="nav-item">
