--- a/detail.html
+++ b/detail.html
@@ -3,48 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/navbar.css" />
-    <link rel="stylesheet" href="./assets/css/detail.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Poppins"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/detail.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <title>Detail Page</title>
+    <style>
+      .active {
+        font-weight: bold;
+        color: #111727 !important;
+      }
+    </style>
   </head>
+
   <body>
-    <nav>
-      <!-- justify content is space between 2 layout -->
-      <!-- layout 1 -->
-      <div class="left">
-        <ul>
-          <a href="./index.html">
-            <img
-              class="logo"
-              src="./assets/images/dumbways.png"
-              alt="logo-image"
-            />
-          </a>
-
-          <li>
-            <a href="./index.html">Home</a>
-          </li>
-          <li class="active">
-            <a href="./blog.html">Blog</a>
-          </li>
-          <li>
-            <a href="./testimonial.html">Testimonial</a>
-          </li>
-        </ul>
-      </div>
-
-      <!-- layout 2 -->
-      <div class="right">
-        <a href="./contact.html">Contact Me</a>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary ps-4">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="./assets/images/dumbways.png" style="width: 50px" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="project.html"
+                >My Project</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="testimonial.html"
+                >Testimonial</a
+              >
+            </li>
+          </ul>
+          <a href="contact.html" class="btn btn-danger">Contact Me</a>
+        </div>
       </div>
     </nav>
 
@@ -69,9 +83,9 @@
             <p class="no-margin">12 Jan 2021 - 11 Feb 2021</p>
           </div>
 
-          <div class="icon-text">
+          <div class="icon-text mt-3">
             <i class="fa fa-clock-o"> </i>
-            <p class="no-margin-left">1 month</p>
+            <p class="no-margin-left mt-0 mb-0">1 month</p>
           </div>
         </div>
 
@@ -81,22 +95,22 @@
           <div class="tech-row">
             <div class="icon-text tech-item">
               <i class="fa fa-code"> </i>
-              <p class="no-margin-left">React JS</p>
+              <p class="no-margin-left mt-0 mb-0">React JS</p>
             </div>
             <div class="icon-text tech-item">
               <i class="fa fa-laptop"> </i>
-              <p class="no-margin-left">JavaScript</p>
+              <p class="no-margin-left mt-0 mb-0">JavaScript</p>
             </div>
           </div>
 
-          <div class="tech-row tech-row-margin">
+          <div class="tech-row tech-row-margin mt-2">
             <div class="icon-text tech-item">
               <i class="fa fa-code"> </i>
-              <p class="no-margin-left">Node JS</p>
+              <p class="no-margin-left mt-0 mb-0">Node JS</p>
             </div>
-            <div class="icon-text tech-item">
+            <div class="icon-text tech-item ps-1">
               <i class="fa fa-laptop"> </i>
-              <p class="no-margin-left">Socket IO</p>
+              <p class="no-margin-left mt-0 mb-0">Socket IO</p>
             </div>
           </div>
         </div>
