--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="blog.html">Blog</a>
+              <a class="nav-link" aria-current="page" href="project.html"
+                >My Project</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="testimonial.html"
