:adhesive_bandage: Changing profile image

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
           <div class="card card-width-mobile rounded-4 shadow-sm border-1">
             <img
-              src="/assets/images/luffy.jpg"
+              src="/assets/images/pede.jpg"
               class="card-img-top rounded-top-4"
               alt="foto profil"
             />
