:adhesive_bandage: Minor fix on image height

--- a/index.html
+++ b/index.html
@@ -103,10 +103,11 @@
             </div>
           </div>
 
-          <div class="card card-width-mobile rounded-4 shadow-sm border-1">
+          <div class="card card-width-mobile rounded-4 shadow-sm border-1 h-25">
             <img
               src="/assets/images/pede.jpg"
               class="card-img-top rounded-top-4"
+              style="height: 40vh"
               alt="foto profil"
             />
             <div class="card-body text-center">
