:art: Improving component styling on project pages

--- a/project.html
+++ b/project.html
@@ -75,7 +75,7 @@
                 >
                 <input type="text" class="form-control" id="input-blog-title" />
               </div>
-              <div class="mb-3 d-flex justify-content-between">
+              <div class="mb-3 d-flex justify-content-between width-date-mobile">
                 <div class="w-100">
                   <label for="input-blog-start" class="form-label"
                     >Start Date</label
