--- a/testimonial.html
+++ b/testimonial.html
@@ -66,7 +66,7 @@
     </nav>
 
     <div class="container">
-      <h1><strong>My Testimonials</strong></h1>
+      <h1><strong>MY TESTIMONIALS</strong></h1>
       <div class="container-rating mt-2">
         <h5>Rating By Star</h5>
         <div class="rating">
