:children_crossing: (Contact) : Submit button synchronized

--- a/contact.html
+++ b/contact.html
@@ -89,8 +89,8 @@
         <textarea id="message"></textarea>
       </div>
 
-      <div>
-        <button type="submit" onclick="getData(event)">Submit</button>
+      <div class="pb-5">
+        <button type="submit" onclick="getData(event)" class="btn btn-primary">Submit</button>
       </div>
     </form>
     <script
